--- a/src/Views/template.html.twig
+++ b/src/Views/template.html.twig
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Accueil{% endblock %}</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    {% block css %}
+    {% block stylesheet %}
+    <link rel="stylesheet" href="../assets/scss/dist/custom.css">
     <link rel="stylesheet" href="assets/css/style.css">
     {% endblock %}
 </head>
@@ -15,6 +15,7 @@
     {% endblock %}
 
     {% block body %}
+    <h1>titre</h1>
     <p>coucou</p>
     {% endblock %}
     </div>
