--- a/src/Views/template.html.twig
+++ b/src/Views/template.html.twig
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Accueil{% endblock %}</title>
-    {% block stylesheet %}
-    <link rel="stylesheet" href="../assets/scss/dist/custom.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    {% endblock %}
-</head>
-<body>
-    <div class="container">
-    {% block navigation %}
-    {% endblock %}
-
-    {% block body %}
-    <h1>titre</h1>
-    <p>coucou</p>
-    {% endblock %}
-    </div>
-    {% block js %}
-    {% endblock %}
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>
+			{% block title %}Accueil
+			{% endblock %}
+		</title>
+		{% block stylesheet %}
+			<link rel="stylesheet" href="../assets/scss/dist/custom.css">
+			<link rel="stylesheet" href="assets/css/style.css">
+		{% endblock %}
+	</head>
+	<body>
+		<div class="container"> {% block navigation %}{% endblock %}
+			{% block body %}
+				<h1>titre</h1>
+				<p>coucou</p>
+			{% endblock %}
+		</div>
+		{% block js %}
+			<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+		{% endblock %}
+	</body>
 </html>
