--- a/src/Views/template.html.twig
+++ b/src/Views/template.html.twig
@@ -8,8 +8,8 @@
 			{% endblock %}
 		</title>
 		{% block stylesheet %}
-			<link rel="stylesheet" href="../assets/scss/dist/custom.css">
-			<link rel="stylesheet" href="assets/css/style.css">
+			<link rel="stylesheet" href="{{baseUrl}}/assets/scss/dist/custom.css">
+			<link rel="stylesheet" href="{{baseUrl}}/assets/css/style.css">
 		{% endblock %}
 	</head>
 	<body>
