--- a/src/Views/template.html.twig
+++ b/src/Views/template.html.twig
@@ -13,10 +13,46 @@
 		{% endblock %}
 	</head>
 	<body>
-		<div class="container"> {% block navigation %}{% endblock %}
+    {% block navigation %}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+				<a class="navbar-brand" href="#">Ciné-Code</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item active">
+							<a class="nav-link" href="#">Prochaines sorties
+								<span class="sr-only">(current)</span>
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">À l'affiche</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Par genre
+							</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<a class="dropdown-item" href="#">Science-fiction</a>
+								<a class="dropdown-item" href="#">Fantastique</a>
+								<a class="dropdown-item" href="#">Policier</a>
+								<a class="dropdown-item" href="#">Animation japonaise</a>
+							</div>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Palmarès</a>
+						</li>
+					</ul>
+					<form class="form-inline my-2 my-lg-0">
+						<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+					</form>
+				</div>
+			</nav>
+    {% endblock %}
+		<div class="container"> 
 			{% block body %}
-				<h1>titre</h1>
-				<p>coucou</p>
 			{% endblock %}
 		</div>
 		{% block js %}
