--- a/src/Views/register.html.twig
+++ b/src/Views/register.html.twig
@@ -1,21 +1,20 @@
 {% extends "template.html.twig" %}
 {% block body %}
-  <div class="form-group">
-    <label for="exampleInputEmail1">Adresse email</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
-  </div>
-    <div class="form-group">
-    <label for="exampleInputPassword1">Identifiant</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Mot de passe</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
-  </div>
-    <div class="form-group">
-    <label for="exampleInputPassword1">Confirmation du mot de passe</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
-  </div>
-  <button type="submit" class="btn btn-primary">Valider</button>
-</form>
-{% endblock %}
+	<div class="form-group">
+		<label for="exampleInputEmail1">Adresse email</label>
+		<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+	</div>
+	<div class="form-group">
+		<label for="exampleInputPassword1">Identifiant</label>
+		<input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+	</div>
+	<div class="form-group">
+		<label for="exampleInputPassword1">Mot de passe</label>
+		<input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
+	</div>
+	<div class="form-group">
+		<label for="exampleInputPassword1">Confirmation du mot de passe</label>
+		<input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
+	</div>
+	<button type="submit" class="btn btn-primary">Valider</button>
+</form>{% endblock %}
