--- a/src/Views/template.html.twig
+++ b/src/Views/template.html.twig
@@ -13,8 +13,8 @@
 		{% endblock %}
 	</head>
 	<body>
-    {% block navigation %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		{% block navigation %}
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 				<a class="navbar-brand" href="#">Ciné-Code</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -28,6 +28,9 @@
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">À l'affiche</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Actualité</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -45,20 +48,26 @@
 						</li>
 					</ul>
 					<form class="form-inline my-2 my-lg-0">
-						<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+						<input class="form-control mr-sm-2" type="search" placeholder="Rechercher un film, un acteur,..." aria-label="Search">
+						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
 					</form>
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item">
+							<a class="nav-link" href="#">Se connecter</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">S'inscrire</a>
+						</li>
+					</ul>
 				</div>
 			</nav>
-    {% endblock %}
-		<div class="container"> 
-			{% block body %}
-			{% endblock %}
-		</div>
-		{% block js %}
-			<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 		{% endblock %}
-	</body>
-</html>
+		<div class="container"> {% block body %}{% endblock %}
+			</div>
+			{% block js %}
+				<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+				<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+				<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+			{% endblock %}
+		</body>
+	</html>
