--- a/src/Views/register.html.twig
+++ b/src/Views/register.html.twig
@@ -1,74 +1,21 @@
-<html lang="fr">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>
-			{% block title %}Accueil
-			{% endblock %}
-		</title>
-		{% block stylesheet %}
-			<link rel="stylesheet" href="assets/scss/dist/custom.css">
-			<link rel="stylesheet" href="assets/css/style.css">
-		{% endblock %}
-	</head>
-  <body>
-<form>
-{% block navigation %}
-			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-				<a class="navbar-brand" href="#">Ciné-Code</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav mr-auto">
-						<li class="nav-item active">
-							<a class="nav-link" href="#">Prochaines sorties
-								<span class="sr-only">(current)</span>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">À l'affiche</a>
-						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-								Par genre
-							</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" href="#">Science-fiction</a>
-								<a class="dropdown-item" href="#">Fantastique</a>
-								<a class="dropdown-item" href="#">Policier</a>
-								<a class="dropdown-item" href="#">Animation japonaise</a>
-							</div>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Palmarès</a>
-						</li>
-					</ul>
-					<form class="form-inline my-2 my-lg-0">
-						<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-					</form>
+{% extends "template.html.twig" %}
+	{% block body %}
+		<div class="body-content">
+			<form method="POST" action="{{baseUrl}}/registerPage">
+				<div class="form-group">
+					<input type="text" name="username" placeholder="Pseudo">
 				</div>
-			</nav>
-		{% endblock %}
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-    <div class="form-group">
-    <label for="exampleInputPassword1">Login</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-		{% block js %}
-			<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-		{% endblock %}
-    </body>
+
+				<div class="form-group">
+					<input type="password" name="password" placeholder="Mot de passe">
+				</div>
+
+				<div class="form-group">
+					<input type="password" name="password_confirm" placeholder="Confirmer votre mot de passe">
+				</div>
+
+
+				<button type="submit" class="form-group">Se connecter</button>
+			</form>
+		</div>
+	{% endblock %}
