--- a/src/Views/login.html.twig
+++ b/src/Views/login.html.twig
@@ -10,12 +10,7 @@
 					<input type="password" name="password" placeholder="Mot de passe">
 				</div>
 
-				<div class="form-group">
-					<input type="password" name="password_confirm" placeholder="Confirmer votre mot de passe">
-				</div>
-
-
-				<button type="submit" class="form-group">S'inscrire</button>
+				<button type="submit" class="form-group">Se connecter</button>
 			</form>
 		</div>
 	{% endblock %}
