--- a/src/Views/404.html.twig
+++ b/src/Views/404.html.twig
@@ -1,5 +1,5 @@
 {% extends "template.html.twig" %}
 {% block body %}
-<h1>Bah alors ? La page que vous avez demandé n'existe pas</h1>
+<h1>404 ERROR : Bah alors ? La page que vous avez demandé n'existe pas</h1>
 <div style="width:100%;height:0;padding-bottom:56%;position:relative;"><iframe src="https://giphy.com/embed/sU511xfb7ORqw" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
 {% endblock %}
