--- a/src/Views/index.html.twig
+++ b/src/Views/index.html.twig
@@ -1,66 +1,20 @@
 {% extends "template.html.twig" %}
 {% block body %}
 	<h1>Accueil</h1>
-	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-		<ol class="carousel-indicators">
-			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-		</ol>
-		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img class="d-block w-100" src="..." alt="First slide">
-			</div>
-			<div class="carousel-item">
-				<img class="d-block w-100" src="..." alt="Second slide">
-			</div>
-			<div class="carousel-item">
-				<img class="d-block w-100" src="..." alt="Third slide">
-			</div>
-		</div>
-		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a>
-		<h1>Dernières sorties</h1>
-		<div class="card-deck">
-			<div class="card">
+
+	<h1>Dernières sorties</h1>
+	<div class="row">
+		{% for i in 0..5 %}
+			<div class="col-md-4 mb-3">
+				<div class="card">
 				<img src="..." class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-					<p class="card-text">
-						<small class="text-muted">Last updated 3 mins ago</small>
-					</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
+					<div class="card-body">
+						<h5 class="card-title">Nom du film</h5>
+						<p class="card-text">Synopsis</p>
+						<a href="#" class="btn btn-primary">En savoir plus</a>
+					</div>
 				</div>
 			</div>
-			<div class="card">
-				<img src="..." class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-					<p class="card-text">
-						<small class="text-muted">Last updated 3 mins ago</small>
-					</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
-				</div>
-			</div>
-			<div class="card">
-				<img src="..." class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-					<p class="card-text">
-						<small class="text-muted">Last updated 3 mins ago</small>
-					</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
-				</div>
-			</div>
-		</div>
+		{% endfor %}
 	</div>
-{% endblock %}
+</div>{% endblock %}
