ajout contenu pages actor, director et movie

--- a/src/Views/movie.html.twig
+++ b/src/Views/movie.html.twig
@@ -1,4 +1,16 @@
 {% extends "template.html.twig" %}
+{% block tille %}Film{% endblock %}
 {% block body %}
-
+<h1>Machin truc</h1>
+	<ul>
+		<li>Réalisé par: Tartempion</li>
+		<li>Année: 1970</li>
+		<li>Acteurs: </li>
+		<li>Genre:</li>
+	</ul>
+    <h2>Synopsis</h2>
+    <div class="affiche"></div>
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam in ex ornare, cursus sapien quis, pharetra dolor. Nulla id ex at sapien finibus molestie eget eget turpis. Donec placerat ullamcorper dignissim. Praesent et placerat mauris, et pretium odio. Aliquam suscipit tristique ante, at mollis nisl interdum posuere. Sed erat massa, dictum vel lacinia sed, porttitor sed justo. Nunc vitae dapibus quam, nec viverra ipsum. Aliquam quis risus ligula. Curabitur pulvinar ullamcorper sapien, eu egestas est maximus ac.
+	</p>
 {% endblock %}
