--- a/src/Views/template.html.twig
+++ b/src/Views/template.html.twig
@@ -15,7 +15,7 @@
 	<body>
 		{% block navigation %}
 			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-				<a class="navbar-brand" href="#">Ciné-Code</a>
+				<a class="navbar-brand" href="{{baseUrl}}">Ciné-Code</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -30,7 +30,7 @@
 							<a class="nav-link" href="#">À l'affiche</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Actualitésw</a>
+							<a class="nav-link" href="#">Actualités</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -53,10 +53,10 @@
 					</form>
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
-							<a class="nav-link" href="#">Se connecter</a>
+							<a class="nav-link" href="{{baseUrl}}/login">Se connecter</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">S'inscrire</a>
+							<a class="nav-link" href="{{baseUrl}}/register">S'inscrire</a>
 						</li>
 					</ul>
 				</div>
