--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,11 @@ h1 {
     float: left;
     margin: 5px;
 }
+.affiche{
+    height:300px;
+    width: 200px;
+    background-color:navy;
+}
 p{
     text-align: justify;
 }
