--- a/src/Views/login.html.twig
+++ b/src/Views/login.html.twig
@@ -1,17 +1,35 @@
 {% extends "template.html.twig" %}
 
 	{% block body %}
+	<br>
 		<div class="body-content">
-			<form method="POST" action="{{baseUrl}}/login/loginUser">
-				<div class="form-group">
-					<input type="text" name="username" placeholder="Pseudo">
+		
+			<form class="form-inline" method="POST" action="{{baseUrl}}/login/loginUser">
+				<label class="sr-only" for="inlineFormInputName2">Name</label>
+				<input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Jane Doe">
+
+				<label class="sr-only" for="inlineFormInputGroupUsername2">Username</label>
+				<div class="input-group mb-2 mr-sm-2">
+					<div class="input-group-prepend">
+					<div class="input-group-text">@</div>
+					</div>
+					<input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Username">
 				</div>
 
-				<div class="form-group">
-					<input type="password" name="password" placeholder="Mot de passe">
+				</form>
+						<div class="form-group">
+								<label for="exampleInputPassword1">Mot de passe</label>
+								<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+						</div>
+						<div class="form-check">
+								<input type="checkbox" class="form-check-input" id="exampleCheck1">
+								<label class="form-check-label" for="exampleCheck1">Regarde moi</label>
+						</div>
+<div class="form-check mb-2 mr-sm-2">
+					<input class="form-check-input" type="checkbox" id="inlineFormCheck">
+					<label class="form-check-label" for="inlineFormCheck">Connexion auto.</label>
 				</div>
-
-				<button type="submit" class="form-group">Se connecter</button>
+	<button type="submit" class="btn btn-primary mb-2">Connexion</button>
 			</form>
 		</div>
 	{% endblock %}
