--- a/src/Views/register.html.twig
+++ b/src/Views/register.html.twig
@@ -1,22 +1,40 @@
 {% extends "template.html.twig" %}
 
 	{% block body %}
-		<div class="body-content">
-			<form method="POST" action="{{baseUrl}}/register/registerUser">
-				<div class="form-group">
-					<input type="text" name="username" placeholder="Pseudo">
-				</div>
+		<br>
+  <div class="form-group">
+	<label for="Id">Username</label>
+  <div class="row">
+    <div class="input-group mb-2 mr-sm-2">
+    <div class="input-group-prepend">
+      <div class="input-group-text">@</div>
+    </div>
+    <input type="text" class="form-control col-3" id="Id" placeholder="Username">
+  </div>
+    <div class="col">
+	<label for="Nom">Nom</label>
+      <input id="Nom" type="text" class="form-control" placeholder="First name">
+    </div>
+    <div class="col">
+	<label for="Prenom">Prénom</label>
+      <input  id="Prenom" type="text" class="form-control" placeholder="Last name">
+    </div>
+  </div>
+  	<form method="POST" action="{{baseUrl}}/register/registerUser">
+	  
+		<label for="exampleInputEmail1">Email</label>
+		<input type="email" class="form-control col-5" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+		<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+  <div class="form-group">
+		<label for="exampleInputPassword1">Mot de passe</label>
+		<input type="password" class="form-control col-5" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="form-check">
+		<input type="checkbox" class="form-check-input" id="exampleCheck1">
+		<label class="form-check-label" for="exampleCheck1">Regarde moi</label>
+  </div>
+  <button type="submit" class="btn btn-primary">inscription</button>
 
-				<div class="form-group">
-					<input type="password" name="password" placeholder="Mot de passe">
-				</div>
-
-				<div class="form-group">
-					<input type="password" name="password_confirm" placeholder="Confirmer votre mot de passe">
-				</div>
-
-
-				<button type="submit" class="form-group">S'inscrire</button>
-			</form>
 		</div>
 	{% endblock %}
