--- a/src/Views/register.html.twig
+++ b/src/Views/register.html.twig
@@ -8,6 +8,10 @@
 				</div>
 
 				<div class="form-group">
+					<input type="text" name="email" placeholder="Email">
+				</div>
+
+				<div class="form-group">
 					<input type="password" name="password" placeholder="Mot de passe">
 				</div>
 
