--- a/src/Views/confirm.html.twig
+++ b/src/Views/confirm.html.twig
@@ -1,8 +1,18 @@
 {% extends "template.html.twig" %}
 
 	{% block body %}
-	<h1>Test confirm</h1>
+		<div class="body-content">
+			<h1>Par messure de sécurité est éviter les robots, vous devez confirmer votre compte manuellement !</h1>
+			<form method="POST" action="{{baseUrl}}/confirm/confirmAccount">
+				<div class="form-group">
+					<input type="text" name="confirmation_token" placeholder="Votre token">
+				</div>
 
+				<div class="form-group">
+					<input type="text" name="id" placeholder="Votre Id s'il vous plait">
+				</div>
 
-    {% endblock %}
-
+				<button type="submit" class="form-group">Confirmer mon compte</button>
+			</form>
+		</div>
+	{% endblock %}
