--- a/src/Views/confirm.html.twig
+++ b/src/Views/confirm.html.twig
@@ -9,7 +9,7 @@
 				</div>
 
 				<div class="form-group">
-					<input type="text" name="id" placeholder="Votre Id s'il vous plait">
+					<input type="text" name="id" >
 				</div>
 
 				<button type="submit" class="form-group">Confirmer mon compte</button>
