modification navbar en fixe

--- a/src/Views/director.html.twig
+++ b/src/Views/director.html.twig
@@ -2,7 +2,7 @@
 {% block title %}Producteur
 {% endblock %}
 {% block body %}
-	<h1>Tartempion</h1>
+	<h1 class="mt-5">Tartempion</h1>
 	<ul>
 		<li>Né le : 1 janvier 1970 à Pétaouchnok</li>
 		<li>Nationalité : on sait pas</li>
