--- a/src/Views/movie.html.twig
+++ b/src/Views/movie.html.twig
@@ -1,7 +1,7 @@
 {% extends "template.html.twig" %}
 {% block tille %}Film{% endblock %}
 {% block body %}
-<h1>Machin truc</h1>
+<h1 class="mt-5">Machin truc</h1>
 	<ul>
 		<li>Réalisé par: Tartempion</li>
 		<li>Année: 1970</li>
