--- a/src/Views/register.html.twig
+++ b/src/Views/register.html.twig
@@ -30,7 +30,7 @@
 			<label for="exampleInputPassword1">Comfirmez votre mot de passe</label>
 			<input type="password" class="form-control" placeholder="">
 		</div>
-		<div class="form-check">
+		<div class="form-check mb-3">
 			<input type="checkbox" class="form-check-input">
 			<label class="form-check-label" for="exampleCheck1">Regarde moi</label>
 		</div>
