--- a/src/Views/actor.html.twig
+++ b/src/Views/actor.html.twig
@@ -1,7 +1,7 @@
 {% extends "template.html.twig" %}
 {% block title %}Acteur{% endblock %}
 {% block body %}
-<h1>Tartempion</h1>
+<h1 class="mt-5">Tartempion</h1>
 	<ul>
 		<li>Né le : 1 janvier 1970 à Pétaouchnok</li>
 		<li>Nationalité : on sait pas</li>
