--- a/src/Views/index.html.twig
+++ b/src/Views/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "template.html.twig" %}
 {% block body %}
-	<h1>Accueil</h1>
+	<h1 class="mt-5">Accueil</h1>
 
 	<h1>Dernières sorties</h1>
 	<div class="row">
