changement couleur bouton bootstrap
en jaune

--- a/src/Views/index.html.twig
+++ b/src/Views/index.html.twig
@@ -11,7 +11,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Nom du film</h5>
 						<p class="card-text">Synopsis</p>
-						<a href="#" class="btn btn-primary">En savoir plus</a>
+						<a href="#" class="btn btn-warning">En savoir plus</a>
 					</div>
 				</div>
 			</div>
