--- a/src/Views/register.html.twig
+++ b/src/Views/register.html.twig
@@ -34,7 +34,7 @@
 			<input type="checkbox" class="form-check-input">
 			<label class="form-check-label" for="exampleCheck1">Regarde moi</label>
 		</div>
-	<button type="submit" class="btn btn-primary">S'inscrire</button>
+	<button type="submit" class="btn btn-warning">S'inscrire</button>
 </form>
 </div>
 {% endblock %}
