--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,1 +1,4 @@
-@import "../../bootstrap/scss/bootstrap.scss"
+@import "../../bootstrap/scss/bootstrap.scss";
+.btn-warning{
+    background-color :#FFDE17;
+}
