--- a/src/Views/login.html.twig
+++ b/src/Views/login.html.twig
@@ -16,9 +16,9 @@
 			</div>
 			<div class="form-check mb-3">
 				<input class="form-check-input" type="checkbox">
-				<label class="form-check-label " for="inlineFormCheck">Se souvenir de moi</label>
+				<label class="form-check-label" for="inlineFormCheck">Se souvenir de moi</label>
 			</div>
-			<button type="submit" class="btn btn-primary mb-2">Connexion</button>
+			<button type="submit" class="btn btn-warning mb-2">Connexion</button>
 		</div>
 	</div>
 </form>{% endblock %}
