on peut ajouter des films

--- a/src/Views/addfilm.html.twig
+++ b/src/Views/addfilm.html.twig
@@ -2,7 +2,7 @@
 
 	{% block body %}
         <div class="body-content">
-            <form method="POST" action="{{baseUrl}}/addfilm/confirmFilm">
+            <form method="POST" action="{{baseUrl}}/addfilm/filmAdd">
                 <div class="form-group">
                     <input type="text" name="titre" placeholder="Titre du film">
                 </div>
