--- a/src/Views/index.html.twig
+++ b/src/Views/index.html.twig
@@ -4,14 +4,14 @@
 
 	<h1>Dernières sorties</h1>
 	<div class="row">
-		{% for i in 0..5 %}
+		{% for movie in movies|slice(0, 6) %}
 			<div class="col-md-4 mb-3">
 				<div class="card">
-				<img src="..." class="card-img-top" alt="...">
+				<img src="{{baseUrl}}/assets/img/affiches/{{movie.affiche}}" class="card-img-top" alt="...">
 					<div class="card-body">
-						<h5 class="card-title">Nom du film</h5>
-						<p class="card-text">Synopsis</p>
-						<a href="#" class="btn btn-warning">En savoir plus</a>
+						<h5 class="card-title">{{movie.titre}}</h5>
+						<p class="card-text">{{movie.synopsis|u.truncate(200,'...',false)}}</p>
+						<a href="{{baseUrl}}/movie/{{movie.id}}" class="btn btn-warning">En savoir plus</a>
 					</div>
 				</div>
 			</div>
