--- a/src/Views/movie.html.twig
+++ b/src/Views/movie.html.twig
@@ -7,7 +7,7 @@
 		<li>Réalisé par:{{movie.artiste}} </li>
 		<li>Année:
 			{{movie.annee}}</li>
-		<li>Acteurs:
+		<li>Acteurs:{{movie.acteurs}}
 		</li>
 		<li>Genre:
 			{{movie.genre}}
