--- a/src/Views/login.html.twig
+++ b/src/Views/login.html.twig
@@ -2,7 +2,7 @@
 
 	{% block body %}
 		<div class="body-content">
-			<form method="POST" action="{{baseUrl}}/login/loginUser">
+			<form method="POST" action="{{baseUrl}}/login">
 				<div class="form-group">
 					<input type="text" name="username" placeholder="Pseudo">
 				</div>
