--- a/src/Views/register.html.twig
+++ b/src/Views/register.html.twig
@@ -4,7 +4,7 @@
 
 	
 		<div class="body-content">
-			<form method="POST" action="{{baseUrl}}/register/registerUser">
+			<form method="POST" action="{{baseUrl}}/register">
 				<div class="form-group">
 					<input type="text" name="username" placeholder="Pseudo">
 				</div>
