ajout page director et conditions

--- a/src/Views/actor.html.twig
+++ b/src/Views/actor.html.twig
@@ -1,12 +1,21 @@
 {% extends "template.html.twig" %}
-{% block title %}{{actors.prenom}} {{actors.nom}}{% endblock %}
+{% block title %}
+	{{actors.prenom}}
+	{{actors.nom}}
+{% endblock %}
 {% block body %}
-<h1 class="mt-5">{{actors.prenom}} {{actors.nom}}</h1>
-	<ul>
-		<li>Né le : {{actors.naissance}}</li>
-	</ul>
-	<img class="avatar" src="{{baseUrl}}/assets/img/avatar.png" width="300px" alt="avatar">
-	<p>
-		{{actors.biographie}}
-	</p>
+	{% if actors.id %}
+		<h1 class="mt-5">{{actors.prenom}}
+			{{actors.nom}}</h1>
+		<ul>
+			<li>Né le :
+				{{actors.naissance}}</li>
+		</ul>
+		<img class="avatar" src="{{baseUrl}}/assets/img/avatar.png" width="300px" alt="avatar">
+		<p>
+			{{actors.biographie}}
+		</p>
+	{% else %}
+		<h1 class="mt-5">Cet acteur n'existe pas</h1>
+	{% endif %}
 {% endblock %}
